# tideAgent

./: .gitattributes  .gitignore  README.md
backend/: main.py  modal_embedding.py  pyproject.toml
backend/app/: config.py
backend/aws/: s3.py
backend/src/: agent.py  api.py  config.py  database.py  db_service.py  embeddings.py  grounding.py  models.py
backend/src/aws/: s3.py  utils.py
backend/src/notebook/: demo.ipynb
backend/src/theory/: research.txt
frontend/: .env.production  index.html
frontend/src/: App.css  App.jsx  index.css
frontend/src/pages/: Annotate.css  Annotate.jsx  Landing.css  Landing.jsx  Overview.css  Overview.jsx  Similarity.css  Similarity.jsx
