[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.76",
    "datasets>=4.8.4",
    "fastapi>=0.135.2",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.13",
    "notebook>=7.5.5",
    "pillow>=12.1.1",
    "pycocotools>=2.0.11",
    "pydantic-settings>=2.13.1",
]
